@@ -2,6 +2,7 @@ Contract Configurator 1.2.2
 - Fixes to VesselDestroyed (thanks tito13kfm).
 - Fixes to contracts failing unexpectedly (thanks Recon777).  Affects RemoteTech Contract Pack.
 - Fixed issues with CollectScience location (thanks severedsolo).
+- Fixed issue with ContractGroup max checks not working correctly for parent contract groups.
 
 Contract Configurator 1.2.1
 - CompleteContract requirement now checks on active contracts too.
